# live-bootcamp-project

./: Cargo.toml  README.md  compose.yml
.github/workflows/: prod.yml  rust.yml
auth-service/: .env  Cargo.toml
auth-service/migrations/: 20250831210920_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs
auth-service/src/services/: hashmap_user_store.rs  hasmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: postgres_user_store.rs  redis_banned_token_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
