[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"]}
async-trait = "0.1.88"
validator = {  version = "0.16.1"}

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
uuid = { version = "1.17", features = ["v4", "serde"]}
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
